--- a/GIT-TEST_1/GIT-TEST_1.ioc
+++ b/GIT-TEST_1/GIT-TEST_1.ioc
@@ -8,10 +8,11 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA13
-Mcu.Pin1=PA14
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin0=PA5
+Mcu.Pin1=PA13
+Mcu.Pin2=PA14
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -27,6 +28,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label
+PA5.GPIO_Label=USER_LED
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -69,10 +75,11 @@ RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=2097000
 RCC.I2C3Freq_Value=2097000
-RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FamilyName,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FamilyName,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
 RCC.LPTIMFreq_Value=2097000
 RCC.LPUARTFreq_Value=2097000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=24000000
